--- a/examples/matrix/platformio.ini
+++ b/examples/matrix/platformio.ini
@@ -11,7 +11,7 @@
 [common]
 lib_deps_external = 
   https://github.com/turgu1/maison.git
-  EspSoftwareSerial@~3.4.1
+  LEDMatrixDriver@~0.2.0
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
   -D MQTT_MAX_PACKET_SIZE=512
@@ -21,7 +21,7 @@ maison_testing =
 [env:huzzah]
 framework = arduino
 platform = espressif8266
-board = huzzah
+board = esp12e
 build_flags = 
   ${common.build_flags}
   ${common.maison_testing}
