--- a/examples/matrix/platformio.ini
+++ b/examples/matrix/platformio.ini
@@ -12,19 +12,24 @@
 lib_deps_external = 
   https://github.com/turgu1/maison.git
   LEDMatrixDriver@~0.2.0
+
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
   -D MQTT_MAX_PACKET_SIZE=512
+
 maison_testing = 
   -D MAISON_TESTING=0
+  -D DEBUGGING=0
 
 [env:huzzah]
 framework = arduino
 platform = espressif8266
 board = esp12e
+
 build_flags = 
   ${common.build_flags}
   ${common.maison_testing}
+
 lib_deps = ${common.lib_deps_external}
 monitor_speed = 74880
 
