--- a/examples/dht_sensor/platformio.ini
+++ b/examples/dht_sensor/platformio.ini
@@ -11,12 +11,12 @@
 [common]
 lib_deps_external = 
   https://github.com/turgu1/maison.git
-  LEDMatrixDriver@~0.2.0
-
+  DHT Sensor Library@~1.3.1
+  Adafruit Unified Sensor@~1.0.2
+  Adafruit DHT Unified@1.0.0
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
   -D MQTT_MAX_PACKET_SIZE=512
-
 maison_testing = 
   -D MAISON_TESTING=0
   -D DEBUGGING=0
@@ -25,11 +25,10 @@ maison_testing =
 framework = arduino
 platform = espressif8266
 board = esp12e
-
 build_flags = 
   ${common.build_flags}
   ${common.maison_testing}
-
 lib_deps = ${common.lib_deps_external}
 monitor_speed = 74880
 upload_speed = 230400
+
