--- a/examples/dht sensor/data/config.json.sample
+++ b/examples/dht sensor/data/config.json.sample
@@ -1,8 +1,12 @@
 {
   "version"          : 1,
-  "device_name"      : "LED_BLINKER",
+  "device_name"      : "",
   "ssid"             : "your ssid",
   "wifi_password"    : "your wifi password",
+  "ip"               : "",
+  "dns"              : "",
+  "gateway"          : "",
+  "subnet_mask"      : "255.255.255.0",
   "mqtt_server_name" : "the mqtt server address",
   "mqtt_user_name"   : "the mqtt user name",
   "mqtt_password"    : "the mqtt user password",
