Code refactoring and debugging

--- a/examples/sonoff basic r2/platformio.ini
+++ b/examples/sonoff basic r2/platformio.ini
@@ -15,9 +15,9 @@ build_flags =
   -D MQTT_MAX_PACKET_SIZE=1024
 maison_testing =
   -D MAISON_TESTING=0
-  -D DEBUGGING=1
+  -D DEBUGGING=0
 
-[env:esp12e]
+[env:sonoff]
 framework = arduino
 platform = espressif8266
 board = esp8285
