--- a/examples/sonoff basic r2/platformio.ini
+++ b/examples/sonoff basic r2/platformio.ini
@@ -13,6 +13,7 @@ lib_deps_external = https://github.com/turgu1/maison.git
 build_flags =
   -Wl,-Teagle.flash.1m64.ld
   -D MQTT_MAX_PACKET_SIZE=1024
+  -D MQTT_OTA=1
 maison_testing =
   -D MAISON_TESTING=0
   -D DEBUGGING=0
