--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -9,10 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps_external = https://github.com/turgu1/maison.git
+lib_deps_external = https://github.com/turgu1/maison.git#ota
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
   -D MQTT_MAX_PACKET_SIZE=1024
+  -D MQTT_OTA=1
+  -D CODE_NAME="BLINKY"
+  -D CODE_VERSION="1.0.0"
+
 maison_testing = 
   -D MAISON_TESTING=0
 
