--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -14,6 +14,8 @@ build_flags =
   -Wl,-Teagle.flash.4m1m.ld 
   -D MQTT_MAX_PACKET_SIZE=1024
   -D MQTT_OTA=1
+  -D APP_NAME="BLINKY"
+  -D APP_VERSION="1.0.1"
 
 maison_testing = 
   -D MAISON_TESTING=0
