--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -12,13 +12,13 @@
 lib_deps_external = https://github.com/turgu1/maison.git#ota
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
-  -D MQTT_MAX_PACKET_SIZE=1024
-  -D MQTT_OTA=1
-  -D APP_NAME="BLINKY"
-  -D APP_VERSION="1.0.1"
+  -DMQTT_MAX_PACKET_SIZE=1024
+  -DMQTT_OTA=1
+  -D'APP_NAME="BLINKY"'
+  -D'APP_VERSION="1.0.1"'
 
 maison_testing = 
-  -D MAISON_TESTING=0
+  -DMAISON_TESTING=0
 
 [env:huzzah]
 framework = arduino
