--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -11,7 +11,7 @@
 [common]
 lib_deps_external = https://github.com/turgu1/maison.git#ota
 build_flags = 
-  -Wl,-Teagle.flash.4m1m.ld 
+  -Wl,-Teagle.flash.1m64.ld 
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="BLINKY"'
