--- a/examples/sonoff basic r2/platformio.ini
+++ b/examples/sonoff basic r2/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps_external = https://github.com/turgu1/maison.git
+lib_deps_external = https://github.com/turgu1/maison.git#ota
 build_flags =
   -Wl,-Teagle.flash.1m64.ld
   -D MQTT_MAX_PACKET_SIZE=1024
