platformio.ini adjustments for OTA

--- a/examples/sonoff basic r2/platformio.ini
+++ b/examples/sonoff basic r2/platformio.ini
@@ -9,14 +9,16 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps_external = https://github.com/turgu1/maison.git#ota
+lib_deps_external = https://github.com/turgu1/maison.git
 build_flags =
   -Wl,-Teagle.flash.1m64.ld
-  -D MQTT_MAX_PACKET_SIZE=1024
-  -D MQTT_OTA=1
+  -DMQTT_MAX_PACKET_SIZE=1024
+  -DMQTT_OTA=1
+  -D'APP_NAME="SONOFFR2"'
+  -D'APP_VERSION="1.0.0"'
 maison_testing =
-  -D MAISON_TESTING=0
-  -D DEBUGGING=0
+  -DMAISON_TESTING=0
+  -DDEBUGGING=0
 
 [env:sonoff]
 framework = arduino
