--- a/examples/dht sensor/platformio.ini
+++ b/examples/dht sensor/platformio.ini
@@ -16,10 +16,13 @@ lib_deps_external =
   Adafruit DHT Unified@1.0.0
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
-  -D MQTT_MAX_PACKET_SIZE=1024
+  -DMQTT_MAX_PACKET_SIZE=1024
+  -DMQTT_OTA=1
+  -D'APP_NAME="DHT"'
+  -D'APP_VERSION="1.0.0"'
 maison_testing = 
-  -D MAISON_TESTING=0
-  -D DEBUGGING=0
+  -DMAISON_TESTING=0
+  -DDEBUGGING=0
 
 [env:esp12e]
 framework = arduino
