--- a/examples/door sensor/platformio.ini
+++ b/examples/door sensor/platformio.ini
@@ -12,10 +12,13 @@
 lib_deps_external = https://github.com/turgu1/maison.git
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
-  -D MQTT_MAX_PACKET_SIZE=1024
+  -DMQTT_MAX_PACKET_SIZE=1024
+  -DMQTT_OTA=1
+  -D'APP_NAME="DOOR"'
+  -D'APP_VERSION="1.0.0"'
 maison_testing = 
-  -D MAISON_TESTING=0
-  -D DEBUGGING=0
+  -DMAISON_TESTING=0
+  -DDEBUGGING=0
 
 [env:esp12e]
 framework = arduino
