--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -9,14 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps_external = https://github.com/turgu1/maison.git#ota
+lib_deps_external = https://github.com/turgu1/maison.git
 build_flags = 
   -Wl,-Teagle.flash.1m64.ld 
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="BLINKY"'
-  -D'APP_VERSION="1.0.4"'
-
+  -D'APP_VERSION="1.0.0"'
 maison_testing = 
   -DMAISON_TESTING=0
 
