--- a/examples/serial input/platformio.ini
+++ b/examples/serial input/platformio.ini
@@ -14,9 +14,13 @@ lib_deps_external =
   EspSoftwareSerial@~3.4.1
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
-  -D MQTT_MAX_PACKET_SIZE=1024
+  -DMQTT_MAX_PACKET_SIZE=1024
+  -DMQTT_OTA=1
+  -D'APP_NAME="SERIAL"'
+  -D'APP_VERSION="1.0.0"'
+
 maison_testing = 
-  -D MAISON_TESTING=0
+  -DMAISON_TESTING=0
 
 [env:huzzah]
 framework = arduino
