Msgs are all consumed at once when network is available.

--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -11,7 +11,7 @@
 [common]
 lib_deps_external = https://github.com/turgu1/maison.git
 build_flags = 
-  -Wl,-Teagle.flash.1m64.ld 
+  -Wl,-Teagle.flash.4m1m.ld 
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="BLINKY"'
@@ -19,10 +19,10 @@ build_flags =
 maison_testing = 
   -DMAISON_TESTING=0
 
-[env:huzzah]
+[env:esp12e]
 framework = arduino
 platform = espressif8266
-board = huzzah
+board = esp12e
 build_flags = 
   ${common.build_flags}
   ${common.maison_testing}
