--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = esp32doit
+
 [common]
 lib_deps_external = https://github.com/turgu1/maison.git
 build_flags = 
@@ -15,7 +18,7 @@ build_flags =
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="BLINKY"'
-  -D'APP_VERSION="1.0.1"'
+  -D'APP_VERSION="1.0.2"'
 maison_testing = 
   -DMAISON_TESTING=0
 
@@ -26,6 +29,18 @@ board = esp12e
 build_flags = 
   ${common.build_flags}
   ${common.maison_testing}
+lib_deps = ${common.lib_deps_external}
+monitor_speed = 74880
+upload_speed = 230400
+
+[env:esp32doit]
+framework = arduino
+platform = espressif32
+board = esp32doit-devkit-v1
+build_flags = 
+  ${common.build_flags}
+  ${common.maison_testing}
+  -DESP32=1
 lib_deps = ${common.lib_deps_external}
 monitor_speed = 74880
 upload_speed = 230400
