--- a/examples/dht sensor/platformio.ini
+++ b/examples/dht sensor/platformio.ini
@@ -9,18 +9,19 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps_external = 
-  https://github.com/turgu1/maison.git
+lib_deps_external =
+  https://github.com/turgu1/maison.git#homie
   DHT Sensor Library@~1.3.1
   Adafruit Unified Sensor@~1.0.2
   Adafruit DHT Unified@1.0.0
-build_flags = 
-  -Wl,-Teagle.flash.4m1m.ld 
+build_flags =
+  -Wl,-Teagle.flash.4m1m.ld
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="DHT"'
   -D'APP_VERSION="1.0.0"'
-maison_testing = 
+  -DHOMIE=1
+maison_testing =
   -DMAISON_TESTING=0
   -DDEBUGGING=0
 
@@ -28,10 +29,9 @@ maison_testing =
 framework = arduino
 platform = espressif8266
 board = esp12e
-build_flags = 
+build_flags =
   ${common.build_flags}
   ${common.maison_testing}
 lib_deps = ${common.lib_deps_external}
 monitor_speed = 74880
 upload_speed = 230400
-
