--- a/examples/dht sensor/platformio.ini
+++ b/examples/dht sensor/platformio.ini
@@ -22,16 +22,16 @@ build_flags =
   -D'APP_VERSION="1.0.0"'
   -DHOMIE=1
 maison_testing =
-  -DMAISON_TESTING=0
-  -DDEBUGGING=0
+  -DMAISON_TESTING=1
+  -DDEBUGGING=1
 
 [env:esp12e]
 framework = arduino
 platform = espressif8266
-board = esp12e
+board = nodemcu
 build_flags =
   ${common.build_flags}
   ${common.maison_testing}
 lib_deps = ${common.lib_deps_external}
 monitor_speed = 74880
-upload_speed = 230400
+upload_speed = 115200
