--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -9,21 +9,22 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps_external = https://github.com/turgu1/maison.git
-build_flags = 
-  -Wl,-Teagle.flash.4m1m.ld 
+lib_deps_external = https://github.com/turgu1/maison.git#separation
+build_flags =
+  -Wl,-Teagle.flash.4m1m.ld
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="BLINKY"'
   -D'APP_VERSION="1.0.1"'
-maison_testing = 
+  -D'MAISON_PREFIX_TOPIC="test"'
+maison_testing =
   -DMAISON_TESTING=0
 
 [env:esp12e]
 framework = arduino
 platform = espressif8266
-board = esp12e
-build_flags = 
+board = nodemcu
+build_flags =
   ${common.build_flags}
   ${common.maison_testing}
 lib_deps = ${common.lib_deps_external}
