--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -18,12 +18,12 @@ build_flags =
   -D'APP_VERSION="1.0.1"'
   -D'MAISON_PREFIX_TOPIC="test"'
 maison_testing =
-  -DMAISON_TESTING=0
+  -DMAISON_TESTING=1
 
 [env:esp12e]
 framework = arduino
 platform = espressif8266
-board = nodemcu
+board = d1_mini_lite
 build_flags =
   ${common.build_flags}
   ${common.maison_testing}
