--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -16,13 +16,13 @@ build_flags =
   -DMQTT_OTA=1
   -D'APP_NAME="BLINKY"'
   -D'APP_VERSION="1.0.1"'
-  -D'MAISON_PREFIX_TOPIC="test"'
+  -D'MAISON_PREFIX_TOPIC="maison"'
 maison_testing =
-  -DMAISON_TESTING=1
+  -DMAISON_TESTING=0
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266
+platform = espressif8266@1.8.0  
 board = d1_mini_lite
 build_flags =
   ${common.build_flags}
