--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -22,7 +22,7 @@ maison_testing =
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266
+platform = espressif8266@2.0.2
 board = d1_mini_lite
 build_flags =
   ${common.build_flags}
