--- a/examples/mailbox/platformio.ini
+++ b/examples/mailbox/platformio.ini
@@ -14,15 +14,15 @@ build_flags =
   -Wl,-Teagle.flash.4m1m.ld 
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
-  -D'APP_NAME="DOOR"'
-  -D'APP_VERSION="1.0.4"'
+  -D'APP_NAME="MAILBOX"'
+  -D'APP_VERSION="1.0.5"'
 maison_testing = 
-  -DMAISON_TESTING=1
-  -DDEBUGGING=1
+  -DMAISON_TESTING=0
+  -DDEBUGGING=0
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266
+platform = espressif8266@1.8.0
 board = esp12e
 build_flags = 
   ${common.build_flags}
