Some examples updates

--- a/examples/serial input/platformio.ini
+++ b/examples/serial input/platformio.ini
@@ -10,21 +10,21 @@
 
 [common]
 lib_deps_external = 
-  https://github.com/turgu1/maison.git
+  https://github.com/turgu1/maison.git#separation
   EspSoftwareSerial@~3.4.1
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="SERIAL"'
-  -D'APP_VERSION="1.0.0"'
+  -D'APP_VERSION="1.0.1"'
 
 maison_testing = 
   -DMAISON_TESTING=0
 
 [env:huzzah]
 framework = arduino
-platform = espressif8266
+platform = espressif8266@1.8.0
 board = huzzah
 build_flags = 
   ${common.build_flags}
