--- a/examples/deep sleep sensor/platformio.ini
+++ b/examples/deep sleep sensor/platformio.ini
@@ -10,13 +10,13 @@
 
 [common]
 lib_deps_external = 
-  https://github.com/turgu1/maison.git
+  https://github.com/turgu1/maison.git#separation
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="DEEPSENSOR"'
-  -D'APP_VERSION="1.0.16"'
+  -D'APP_VERSION="1.0.18"'
 maison_testing = 
   -DMAISON_TESTING=0
   -DQUICK_TURN=0
@@ -24,11 +24,11 @@ maison_testing =
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266
+platform = espressif8266@1.8.0
 board = esp12e
 build_flags = 
   ${common.build_flags}
   ${common.maison_testing}
 lib_deps = ${common.lib_deps_external}
 monitor_speed = 74880
-upload_speed = 230400
+upload_speed = 115200
