--- a/examples/matrix/platformio.ini
+++ b/examples/matrix/platformio.ini
@@ -17,14 +17,14 @@ build_flags =
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="MATRIX"'
-  -D'APP_VERSION="1.0.0"'
+  -D'APP_VERSION="1.0.2"'
 maison_testing =
   -DMAISON_TESTING=0
   -DDEBUGGING=0
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266
+platform = espressif8266@1.8.0
 board = esp12e
 
 build_flags =
