--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -15,14 +15,15 @@ build_flags =
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="BLINKY"'
-  -D'APP_VERSION="1.0.1"'
-  -D'MAISON_PREFIX_TOPIC="maison"'
+  -D'APP_VERSION="1.0.11"'
+  -D'MAISON_PREFIX_TOPIC="test"'
 maison_testing =
   -DMAISON_TESTING=0
+  -DOTA_TESTING=1
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266@1.8.0
+platform = espressif8266@2.2.3
 board = d1_mini_lite
 build_flags =
   ${common.build_flags}
@@ -30,3 +31,4 @@ build_flags =
 lib_deps = ${common.lib_deps_external}
 monitor_speed = 74880
 upload_speed = 230400
+ 
