--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -19,7 +19,7 @@ build_flags =
   -D'MAISON_PREFIX_TOPIC="test"'
 maison_testing =
   -DMAISON_TESTING=0
-  -DOTA_TESTING=1
+  -DNET_TESTING=1
 
 [env:esp12e]
 framework = arduino
