--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -18,7 +18,10 @@ build_flags =
   -D'APP_VERSION="1.0.11"'
   -D'MAISON_PREFIX_TOPIC="test"'
 maison_testing =
-  -DMAISON_TESTING=1
+  -DMAISON_TESTING=0
+  -DJSON_TESTING=1
+  -DNET_TESTING=1
+  -DOTA_TESTING=0
 
 [env:esp12e]
 framework = arduino
