--- a/examples/mailbox/platformio.ini
+++ b/examples/mailbox/platformio.ini
@@ -15,9 +15,10 @@ build_flags =
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="MAILBOX"'
-  -D'APP_VERSION="1.0.11"'
+  -D'APP_VERSION="1.0.12"'
 maison_testing = 
   -DMAISON_TESTING=0
+  -DNET_TESTING=1
   -DDEBUGGING=0
 
 [env:esp12e]
