--- a/examples/dht sensor/platformio.ini
+++ b/examples/dht sensor/platformio.ini
@@ -26,7 +26,7 @@ maison_testing =
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266
+platform = espressif8266@2.2.3
 board = esp12e
 build_flags = 
   ${common.build_flags}
