--- a/examples/door sensor/platformio.ini
+++ b/examples/door sensor/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps_external = https://github.com/turgu1/maison.git#separation
+lib_deps_external = https://github.com/turgu1/maison.git
 build_flags = 
   -Wl,-Teagle.flash.4m1m.ld 
   -DMQTT_MAX_PACKET_SIZE=1024
@@ -22,7 +22,7 @@ maison_testing =
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266@1.8.0
+platform = espressif8266@2.2.3
 board = esp12e
 build_flags = 
   ${common.build_flags}
