--- a/examples/sonoff basic r2/platformio.ini
+++ b/examples/sonoff basic r2/platformio.ini
@@ -22,7 +22,7 @@ maison_testing =
 
 [env:sonoff]
 framework = arduino
-platform = espressif8266
+platform = espressif8266@2.2.3
 board = esp8285
 build_flags =
   ${common.build_flags}
