--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -9,18 +9,18 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps_external = https://github.com/turgu1/maison.git#separation
+lib_deps_external = https://github.com/turgu1/maison.git
 build_flags =
   -Wl,-Teagle.flash.4m1m.ld
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="BLINKY"'
-  -D'APP_VERSION="1.0.13"'
+  -D'APP_VERSION="1.0.19"'
   -D'MAISON_PREFIX_TOPIC="test"'
 maison_testing =
   -DMAISON_TESTING=0
   -DJSON_TESTING=0
-  -DNET_TESTING=1
+  -DNET_TESTING=0
   -DOTA_TESTING=0
 
 [env:esp12e]
