--- a/examples/matrix/platformio.ini
+++ b/examples/matrix/platformio.ini
@@ -20,6 +20,7 @@ build_flags =
   -D'APP_VERSION="1.0.4"'
 maison_testing =
   -DMAISON_TESTING=0
+  -DOTA_TESTING=1
   -DDEBUGGING=0
 
 [env:esp12e]
