--- a/examples/matrix/platformio.ini
+++ b/examples/matrix/platformio.ini
@@ -17,10 +17,11 @@ build_flags =
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
   -D'APP_NAME="MATRIX"'
-  -D'APP_VERSION="1.0.6"'
+  -D'APP_VERSION="1.0.7"'
 maison_testing =
   -DMAISON_TESTING=0
   -DOTA_TESTING=0
+  -DNET_TESTING=1
   -DDEBUGGING=0
 
 [env:esp12e]
