--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -20,13 +20,13 @@ build_flags =
 maison_testing =
   -DMAISON_TESTING=0
   -DJSON_TESTING=0
-  -DNET_TESTING=0
+  -DNET_TESTING=1
   -DOTA_TESTING=0
 
 [env:esp12e]
 framework = arduino
-platform = espressif8266@2.2.3
-board = d1_mini_lite
+platform = espressif8266@2.3.3
+board = esp12e
 build_flags =
   ${common.build_flags}
   ${common.maison_testing}
