--- a/examples/led blink/platformio.ini
+++ b/examples/led blink/platformio.ini
@@ -14,6 +14,7 @@ build_flags =
   -Wl,-Teagle.flash.4m1m.ld
   -DMQTT_MAX_PACKET_SIZE=1024
   -DMQTT_OTA=1
+  -DMAISON_SECURE=0
   -D'APP_NAME="BLINKY"'
   -D'APP_VERSION="1.0.20"'
   -D'MAISON_PREFIX_TOPIC="test"'
